force-app/main/default/objects/Part_Usage__c/Part_Usage__c.object-meta.xml
<CustomObject>
    <label>Part Usage</label>
    <pluralLabel>Part Usages</pluralLabel>
    <nameField>
        <label>Part Usage Number</label>
        <type>AutoNumber</type>
        <displayFormat>PU-{0000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>