force-app/main/default/objects/Part_Usage__c/fields/Part__c.field-meta.xml
<CustomField>
    <fullName>Part__c</fullName>
    <label>Part</label>
    <referenceTo>Part__c</referenceTo>
    <relationshipLabel>Part Usages</relationshipLabel>
    <relationshipName>Part_Usages</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
    <type>Lookup</type>
</CustomField>