force-app/main/default/objects/Part_Usage__c/validationRules/Part_And_Quantity_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Part_And_Quantity_Required</fullName>
    <active>true</active>
    <errorConditionFormula>OR(ISBLANK(Part__c), ISBLANK(Quantity__c), Quantity__c &lt;= 0)</errorConditionFormula>
    <errorMessage>Select a part and enter a quantity greater than zero.</errorMessage>
</ValidationRule>